# DMP

./: .gitignore  CMakeLists.txt  DataParser.cpp  DataParser.h  README.md  fileInformazioniMisure.txt  main.cpp
Driver/: PowerSupplyTEST.vbs  dataAcquisitionTEST.vbs  motorController.vbs
Test/: test.cpp
